--- a/idnex.html
+++ b/idnex.html
@@ -12,38 +12,40 @@
 	<body>
 		<div id="game">
 			<div class="game__panel" :class="{ game__stopped: isFastWin() || isGameStopped() }">
-				<div class="game__left" :class="{ game__cur: teames[0].isCurrent && !isGameStopped() }">
+				<div class="game__left" :class="{ game__cur: teames[0].isCurrent }">
 					<div class="game__team">
 						<h2 class="game__team-name">Name of team</h2>
 					</div>
-					<input class="game__input" v-model="teames[0].name" type="text" placeholder="Enter your team name">
-					<div class="game__team-score">
-							{{ teames[0].score }}
-					</div>
+					<input type="text"
+						class="game__input"
+						v-model="teames[0].name"
+						placeholder="Enter your team name"
+					>
+					<div class="game__team-score">{{ teames[0].score }}</div>
 					<div class="game__team-balance" v-if="isGameStarted">
-						<div class="game__team-text">
-							Left
-						</div>
+						<div class="game__team-text">Left</div>
 						{{ teames[0].goalsBalance }}
 					</div>
 				</div>
-				<div class="game__right" :class="{ game__cur: teames[1].isCurrent && !isGameStopped() }">
+				<div class="game__right" :class="{ game__cur: teames[1].isCurrent }">
 					<div class="game__team">
 						<h2 class="game__team-name">Name of team</h2>
 					</div>
-					<input class="game__input" v-model="teames[1].name" type="text" placeholder="Enter your team name">
-					<div class="game__team-score">
-						{{ teames[1].score }}
-					</div>
+					<input type="text"
+						class="game__input"
+						v-model="teames[1].name"
+						placeholder="Enter your team name">
+					<div class="game__team-score">{{ teames[1].score }}</div>
 					<div class="game__team-balance" v-if="isGameStarted">
-						<div class="game__team-text">
-							Left
-						</div>
+						<div class="game__team-text">Left</div>
 						{{ teames[1].goalsBalance }}
 					</div>
 				</div>
-				<div class="game__start" @click="gameStart"><i class="fas fa-play"></i></div>
-				<button class="game__goal" @click="goal">Goal</button>
+
+				<button class="game__new" @click="startNewGame"><i class="fas fa-sync"></i>New game</button>
+				<button class="game__start" @click="gameStart"><i class="fas fa-play"></i></button>
+				<button class="game__goal" @click="goal" v-if="isGameStarted">Goal</button>
+				
 				<div class="game__winner" v-if="isFastWin() || isGameStopped()">
 					The "{{ winnerTeam }}" won {{ teames[0].score }} : {{ teames[1].score }}.
 				</div>
